<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/screenTtlTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLoginTtl"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:hint="@string/strUserName"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:hint="@string/strPassword"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_2_selector"
        android:gravity="center"
        android:text="@string/strLogin"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_2_selector"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/strSignup"
        android:textColor="@color/black" />

</LinearLayout>