<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/oneBtnsDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/oneBtnsDialogMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="7"
            android:padding="7dp"
            android:scrollbars="vertical"
            android:text="@string/gcmMessageReceived"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/oneBtnDialogOk"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_2_selector"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="15sp" />

</LinearLayout>